Fixed nav problems collapsing

--- a/client/src/components/Navigation/Navigation.module.css
+++ b/client/src/components/Navigation/Navigation.module.css
@@ -86,12 +86,9 @@
 }
 
 .username {
-    padding-top: 1em;
-    color: white;
-    border-bottom: 2px solid white;
-    text-align: right;
     font-style: italic;
-    padding-right: 2em;
+    padding: 0;
+    margin: 0;
 }
 
 .signUp {
@@ -108,6 +105,52 @@
    display: none;
    font-size: 2.5em;
    display: none;
+}
+
+.profileMenu::before {
+    display: block;
+    content: "";
+    width: 200px;
+    border: 2px solid white;
+    position: absolute;
+    top: -10px;
+    left: 0;
+}
+
+.profileMenu {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    right: 1.8%;
+    background-color: #ccccccc0;;
+    text-align: right;
+    max-width: max-content;
+    padding-right: 1em;
+    font-size: 1.3em;
+    z-index: 1000;
+    padding: 1em 1em;
+}
+
+.profileMenu a {
+    text-decoration: none;
+    color: black;
+}
+
+.profileMenu p {
+    color: black;
+    padding-bottom: 1em;
+}
+
+.profileDropdown i {
+    border: 2px solid white;
+    padding: 0.5em;
+    border-radius: 50%;
+}
+
+.profileDropdown button {
+    border-radius: 50%;
+    border: none;
 }
 
 
